# svg-creator

./: .gitignore  Cargo.toml  LICENSE  README.md  __init__.py  preferences.py
experiments/: bench_scalar_multiplication.py
mod/: bitmaps_render.py  bitmaps_trace.py  check_settings.py  localize_scene.py  setup_geometry.py  setup_render.py  setup_visuals.py  svg_creation.py  ui.py
src/: image_analysis.rs  lib.rs
